# XorVsBloom

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: BloomFilter.h  FastXorFilter.h  Filter.h  XorFilter.h
results/fractionKeys/: AvgQueryTimePerKey(ns).csv  constructionTime(ms).csv  constructionTime.csv  fpr.csv  memory(bytes).csv  memory.csv  memoryPerKey(bytes).csv  memoryPerKey.csv  timePerKey(ms).csv  timePerKey.csv
results/keys/: constructionTime.csv  fpr.csv  memory.csv  memoryPerKey.csv  timePerKey.csv
results/keys20/: AvgQueryTimePerKey(ns).csv  constructionTime(ms).csv  constructionTime.csv  fpr.csv  memory(bytes).csv  memory.csv  memoryPerKey(bytes).csv  timePerKey(ms).csv  timePerKey.csv
results/keys80/: AvgQueryTimePerKey(ns).csv  constructionTime(ms).csv  constructionTime.csv  fpr.csv  memory.csv  memoryPerKey.csv  timePerKey(ms).csv  timePerKey.csv
src/: BloomFilter.cpp  FastXorFilter.cpp  XorFilter.cpp  dataUtils.cpp  experiments.cpp  hashUtils.cpp  helpers.cpp  main.cpp  statistics.cpp
